--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 
 REACT_APP_API_URL = https://dark-erin-antelope-yoke.cyclic.app
 
-API = https://lucky-tulumba-859019.netlify.app
+API2 = https://lucky-tulumba-859019.netlify.app
